# tribulacao-crewai-newslatter

./: LICENSE  README.md  requirements.txt
newslatter_crypto/: README.md  pyproject.toml  report.md
newslatter_crypto/src/newslatter_crypto/: crew.py  main.py
newslatter_crypto/src/newslatter_crypto/config/: agents.yaml  tasks.yaml
