[tool.poetry]
name = "newslatter_crypto"
version = "0.1.0"
description = "newslatter_crypto using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }

[tool.poetry.scripts]
newslatter_crypto = "newslatter_crypto.main:run"
train = "newslatter_crypto.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
